Bug 312998 fix EmbedWindow::GetVisibility Patch from chpe@gnome.org r=caillon sr=roc